<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbegi"
    android:gravity="center_vertical|center_horizontal|center|end"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageButton
        android:id="@+id/btnConfiguracoes"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="15dp"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:padding="7dp"
        android:scaleType="fitXY"
        android:src="@drawable/settings"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorwhite"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="358dp"
            android:layout_height="180dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:contentDescription="Logo"
            app:srcCompat="@drawable/icone" />

        <LinearLayout
            android:layout_width="399dp"
            android:layout_height="260dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:background="@color/colorwhite"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/lblTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/edtUsuario"
                style="@style/edt_style"
                android:hint="@string/usuario"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtSenha"
                style="@style/edt_style"
                android:hint="@string/senha"
                android:inputType="textPassword" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0.3"
        android:background="@color/colorwhite"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEntrar"
            style="@style/btn_style"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/entrar"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>