<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbegi"
    android:orientation="vertical"
    tools:context=".Configuracao">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_weight="0"
        android:background="@color/colorbegi"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/configuracoes"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVoltar"
            style="@style/btn_style"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:text="@string/voltar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="543dp"
        android:layout_weight="1"
        android:background="@color/colorwhite"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/icone" />

        <TextView
            android:id="@+id/lblOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/endereco_bd"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/edtEndereco"
                style="@style/edt_style"
                android:layout_weight="1"
                android:hint="Insira o endereço. Ex: http://192.168.0.1"
                android:inputType="text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTestar"
                style="@style/btn_style"
                android:layout_width="225dp"
                android:layout_height="71dp"
                android:layout_weight="3"
                android:text="@string/verificar_conexao"
                android:textAlignment="center"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0"
        android:background="@color/colorwhite"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSalvar"
            style="@style/btn_style"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/salvar"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>