<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbegi"
    android:orientation="vertical"
    tools:context=".Mostrarcategoria">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_weight="0"
        android:background="@color/colorbegi"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/mesa"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVoltar"
            style="@style/btn_style"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:text="@string/voltar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="498dp"
        android:layout_weight="1"
        android:background="@color/colorwhite"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <ListView
            android:id="@+id/listViewCategorias"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0"
        android:background="@color/colorwhite"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVisualizarComanda"
            style="@style/btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/visualizar_comanda"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>